# sgwbpy

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: api.rst  conf.py  index.rst
src/sgwbpy/: __init__.py  first_commit.py
tests/: test_sgwbpy.py
